# CLI-tool

./: Cargo.toml  README.md  myfunc.yml
builder/: Cargo.toml
builder/src/: build.rs  copy.rs  lib.rs  publish.rs
builder/tests/: copy.rs
ci/: faas-cli.sha256.sha256  faas-cli.sha256.sha256.sha256  hashgen.sh
command/: Cargo.toml
command/src/: auth.rs  build.rs  cloud.rs  cmds.rs  deploy.rs  describe.rs  error.rs  faas.rs  fetch_template.rs  generate.rs  invoke.rs  lib.rs  list.rs  login.rs  logout.rs  logs.rs  logs_format.rs  namespaces.rs  new_function.rs  priority.rs  publish.rs  push.rs  registry_login.rs  remove.rs  secret.rs  secret_create.rs  secret_list.rs  secret_remove.rs  secret_update.rs  store.rs  store_deploy.rs  store_describe.rs  store_list.rs  template.rs  template_pull.rs  template_pull_stack.rs  template_store.rs  template_store_describe.rs  template_store_list.rs  template_store_pull.rs  (+4 more)
command/tests/: list.rs  logs.rs  logs_format.rs
config/: Cargo.toml
config/src/: config_file.rs  lib.rs
config/tests/: config_file.rs
exec/: Cargo.toml
exec/src/: lib.rs
flags/: Cargo.toml
flags/src/: lib.rs  log_format.rs  time_format.rs  timestamp.rs
flags/tests/: log_format.rs  time_format.rs  timestamp.rs
proxy/: Cargo.toml
proxy/src/: auth.rs  client.rs  delete.rs  deploy.rs  describe.rs  function_store.rs  invoke.rs  lib.rs  list.rs  logs.rs  namespace.rs  proxy.rs  scale.rs  secret.rs  utils.rs  version.rs
proxy/tests/: client.rs  delete.rs  function_store.rs  list.rs  logs.rs  proxy.rs  scale.rs  secret.rs  utils.rs  version.rs
schema/: Cargo.toml
schema/src/: describe.rs  image.rs  lib.rs  metadata.rs  secret.rs  store_item.rs
schema/src/knative/v1/: serving.rs
schema/src/openfaas/v1/: crd.rs
schema/src/openfaas/v1alpha2/: crd.rs
schema/src/store/v2/: store.rs
schema/tests/: image.rs
src/: main.rs
stack/: Cargo.toml
stack/src/: language_template.rs  lib.rs  schema.rs  stack.rs
stack/tests/: language_template.rs  stack.rs
utility/: Cargo.toml  new
utility/src/: envsubst.rs  error.rs  lib.rs
utility/src/openfaas/: mod.rs
utility/src/openfaas/faas/requests/: requests.rs
utility/src/openfaas/faas/types/: info_request.rs  mod.rs  model.rs
utility/src/openfaas/faas_provider/: logs.rs  mod.rs  types.rs
version/: Cargo.toml
version/src/: lib.rs  version.rs
versioncontol/: Cargo.toml
versioncontol/src/: core.rs  git.rs  lib.rs  parse.rs
versioncontol/tests/: parse.rs
