[package]
name = "faas"
version = "0.1.0"
authors = ["Abdelmonem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1" ,features =["full"] }
command = { path = "command"}

[workspace]
members = ["." ,"builder" , "utility"
    ,"schema","version","versioncontol","exec","flags", "stack","proxy","config","command"]
