[package]
name = "config"
version = "0.1.0"
authors = ["Abdelmonem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126" , features = ["derive"] }
lazy_static="1.4.0"
utility = { path = "../utility"}
url = "1.5.1"
#reqwest = "0.11.3"
serde_yaml = "0.8.17"
shellexpand = "2.1.0"
path-clean="0.1.0"
cfg-if = "0.1"
base64 = "0.13.0"
envsubst = "0.2.0"


[dev-dependencies]
tempdir="0.3.7"