[package]
name = "proxy"
version = "0.1.0"
authors = ["Abdelmonem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = {path = "../utility"}
url = "1.5.1"
serde = {version = "1.0.126" , features = ["derive"] }
schema = {path = "../schema"}
reqwest = "0.11.3"
http = "0.2.4"
serde_yaml = "0.8.17"
config = {path = "../config"}
serde_json = "1.0"
stack ={path = "../stack"}


[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
mockito = "0.30.0"
lazy_static = "1.4.0"
