[package]
name = "schema"
version = "0.1.0"
authors = ["Abdelmonem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility"}
serde_yaml ={version = "0.8.1" }
serde = {version = "1.0.126" , features = ["derive"] }