[package]
name = "stack"
version = "0.1.0"
authors = ["Abdelmonem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126" , features = ["derive"] }
lazy_static="1.4.0"
utility = { path = "../utility"}
url = "1.5.1"
reqwest = "0.11.3"
bytes = "1.0.1"
envsubst = "0.2.0"
serde_yaml = "0.8.17"
regex = "1"
wildmatch = "2.1.0"


[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
tempdir="0.3.7"