[package]
name = "versioncontol"
version = "0.1.0"
authors = ["Abdelmonem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility"}
exec = { path="../exec" }

lazy_static = "1.4.0"
regex = "1"
